--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title><%= content_for(:title) || "Allegro" %></title>
+    <title><%= content_for?(:title) ? strip_tags(yield(:title)) : "Allegro" %></title>
+    <meta name="apple-mobile-web-app-title" content="Allegro">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <%= csrf_meta_tags %>
