--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,7 @@
 <% provide(:title, "Home") %>
 <p>Find me in app/views/home/index.html.erb</p>
 <p>Stimulus says, <i data-controller=hello></i></p>
+<br />
+<input type="text" style="border: 1px solid blue">
+<!-- app/views/home/index.html.erb -->
+<h1 class="text-3xl font-bold underline">Hello, Tailwind CSS in Rails!</h1>
