typescript + react with classic react setup

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,3 +5,5 @@
 <input type="text" style="border: 1px solid blue">
 <!-- app/views/home/index.html.erb -->
 <h1 class="text-3xl font-bold underline">Hello, Tailwind CSS in Rails!</h1>
+
+<%= vite_javascript_tag 'app.tsx' %>
