--- a/app/frontend/stylesheets/index.css
+++ b/app/frontend/stylesheets/index.css
@@ -1,4 +1,4 @@
-@import "modern-normalize";
-@import "reset";
-@import "base";
-@import "application.tailwind";
+@import 'modern-normalize';
+@import 'reset';
+@import 'base';
+@import 'application.tailwind';
