tailwind scaffold landing page

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,5 +1,4 @@
-<% provide(:title, "Home") %>
-
+<!-- app/views/pages/landing.html.erb -->
 <div class="min-h-screen bg-gray-100">
   <%= render 'shared/header' %>
   <%= render 'pages/landing/hero' %>
