--- a/app/views/pages/landing/_hero.html.erb
+++ b/app/views/pages/landing/_hero.html.erb
@@ -7,7 +7,7 @@
       <%= link_to "Get Started", "#", class: "bg-blue-500 text-white font-bold py-3 px-8 rounded-full hover:bg-blue-600 transition duration-300" %>
     </div>
     <div class="md:w-1/2 mb-8 md:mb-0">
-      <img src="/api/placeholder/500/300" alt="App Screenshot" class="rounded-lg shadow-lg">
+      <img src="<%= vite_asset_path('images/app-screenshot.webp') %>" alt="App Screenshot" class="rounded-lg shadow-lg" />
     </div>
   </div>
 </main>
