--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,21 +10,15 @@
         <%= link_to "Features", "#", class: "text-gray-800 hover:text-gray-600" %>
         <%= link_to "Pricing", "#", class: "text-gray-800 hover:text-gray-600" %>
         <%= link_to "Contact", "#", class: "text-gray-800 hover:text-gray-600" %>
-        <% if user_signed_in? %> 
-          <!-- <div> Welcome <%= current_user.email %> </div> -->
-          <%= button_to "Sign out", destroy_user_session_path, method: :delete %> 
-        <% else %>
-          <%= button_to "Sign in", new_user_session_path %> 
-        <% end %>
       </div>
       <div class="hidden md:flex space-x-4">
         <% if user_signed_in? %> 
           <div>
-            <%= current_user.email %>
+            <%= current_user.profile.full_name %>
           </div>
-          <%= button_to "Sign out", destroy_user_session_path, method: :delete %> 
+          <%= button_to "Sign Out", destroy_user_session_path, method: :delete %> 
         <% else %>
-          <%= button_to "Sign in", new_user_session_path %> 
+          <%= button_to "Sign In", new_user_session_path %> 
         <% end %>
       </div>
       <div class="md:hidden">
